syntax = "proto3";

import "google/protobuf/timestamp.proto";

package vera.grpc;

service AuditService {
    // Starts the creation of an archive based on the given parameters
    rpc Create (CreateAuditRequest) returns (CreateAuditReply);
}

message CreateAuditRequest {
    string accountId = 1;

    // TODO(kevin): include store number..?

    // Start of the period to generate the archive for
    google.protobuf.Timestamp startDate = 2;

    // End of the period to generate the archive for
    google.protobuf.Timestamp endDate = 3;
}

message CreateAuditReply {
    // Unique identifier of the audit to retrieve when it's ready
    string auditId = 1;
}
